<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/twist"/>
    <EditText
        android:id="@+id/twistTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/twist"
        android:inputType="text" />
    <TextView
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Twistee"/>
    <EditText
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/txtTwistee"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Twistee"
        android:inputType="text" />
    <TextView
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/YourAnswer"/>
    <EditText
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/txtYourAnswer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/YourAnswer"
        android:inputType="text" />
    <TextView
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TwisteeAnswer"/>
    <EditText
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/txtTwisteeAnswer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TwisteeAnswer"
        android:inputType="text" />
    <TextView
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reward"/>
    <EditText
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/txtReward"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Reward"
        android:inputType="text" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/whiteText"
            android:id="@+id/btnSave"
            android:text="@string/save"/>
    </RelativeLayout>
</LinearLayout>