<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20dp"
        android:textColor="@color/whiteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTwistTitle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Twistee"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtTwistee"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Reward"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtReward"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/YourAnswer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtYourAnswer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/TwisteeAnswer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtTwisteeAnswer"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="20dp"
            android:textColor="@color/whiteText"
            android:text="@string/IRight"
            android:layout_alignParentLeft="true"
            android:id="@+id/btnIRight"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnIRight"
            android:layout_alignParentRight="true"
            android:paddingLeft="20dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/whiteText"
            android:id="@+id/btnTwisteeRight"/>
    </RelativeLayout>
</LinearLayout>